move list of matricies to main component

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,2 +1,5 @@
-<jrl-matrix></jrl-matrix>
+<jrl-matrix [matrix]="currentMatrix"></jrl-matrix>
+<textarea [value]="getOutput()"></textarea>
+
 <jrl-color-palette></jrl-color-palette>
+
