--- a/src/app/main/matrix/matrix.component.html
+++ b/src/app/main/matrix/matrix.component.html
@@ -1,6 +1,6 @@
 <body>
   <table>
-    <tr *ngFor="let row of leds">
+    <tr *ngFor="let row of matrix">
       <td *ngFor="let led of row">
         <jrl-led [led]="led" [mouseDown]="mouseDown" [rightClickDown]="rightClickDown"></jrl-led>
       </td>
@@ -9,4 +9,3 @@
 </body>
 
 
-<textarea [value]="getOutput()"></textarea>
