--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -11,3 +11,11 @@ textarea {
   width: 500px;
   height: 250px;
 }
+
+.move button{
+  width: 30px;
+  height: 30px;
+  margin: 10px 20px;
+  border: 2px solid black;
+  background-color: #aaa;
+}
