set current matrix by index

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<jrl-matrix [matrix]="currentMatrix"></jrl-matrix>
+<jrl-matrix [matrix]="matrices[currentMatrix]"></jrl-matrix>
 <div class="move">
   <button (click)="moveUp()">
     <i class="fa fa-arrow-up" aria-hidden="true"></i>
