--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -13,7 +13,18 @@
   <button (click)="moveRight()">
     <i class="fa fa-arrow-right" aria-hidden="true"></i>
   </button>
+
   <div class="spacer">&nbsp;</div>
+
+  <button (click)="reset()">
+    <i class="fa fa-repeat" aria-hidden="true"></i>
+  </button>
+  <button (click)="copy()">
+    <i class="fa fa-files-o" aria-hidden="true"></i>
+  </button>
+
+  <div class="spacer">&nbsp;</div>
+
   <button (click)="add()">
     <i class="fa fa-plus" aria-hidden="true"></i>
   </button>
@@ -24,8 +35,10 @@
 
 <div class="matrices">
   <jrl-matrix-thumbnail
-    *ngFor="let matrix of matrices"
-    [matrix]="matrix">
+    *ngFor="let matrix of matrices; let i = index;"
+    [matrix]="matrix"
+    class="{{currentMatrix == i ? 'selected' : ''}}"
+    (click)="select(i)">
   </jrl-matrix-thumbnail>
 </div>
 
