--- a/src/app/main/matrix/matrix-thumbnail/matrix-thumbnail.component.html
+++ b/src/app/main/matrix/matrix-thumbnail/matrix-thumbnail.component.html
@@ -2,7 +2,7 @@
   <table>
     <tr *ngFor="let row of matrix">
       <td *ngFor="let led of row">
-        <div class="inner-cell" [ngStyle]="{'background-color': led.color.hex}"></div>
+        <div class="inner-cell" [ngStyle]="getColor(led)"></div>
       </td>
     </tr>
   </table>
