add json download button

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -31,6 +31,16 @@
   <button (click)="remove()">
     <i class="fa fa-minus" aria-hidden="true"></i>
   </button>
+
+  <div class="spacer">&nbsp;</div>
+
+  <button (click)="save()">
+    <i class="fa fa-floppy-o" aria-hidden="true"></i>
+  </button>
+  <button (click)="upload()">
+    <i class="fa fa-upload" aria-hidden="true"></i>
+  </button>
+
 </div>
 
 <div class="matrices">
