--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -37,9 +37,13 @@
   <button (click)="save()">
     <i class="fa fa-floppy-o" aria-hidden="true"></i>
   </button>
-  <button (click)="upload()">
-    <i class="fa fa-upload" aria-hidden="true"></i>
-  </button>
+
+  <i class="fa fa-upload" aria-hidden="true"></i>
+  <input type="file" (change)="upload($event)" #input>
+
+  <!--<button (click)="upload($event)">-->
+    <!--<i class="fa fa-upload" aria-hidden="true"></i>-->
+  <!--</button>-->
 
 </div>
 
